# tassle

./: .dockerignore  .gitignore  .oxlintignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  entrypoint.sh  package.json  pnpm-lock.yaml  railpack.json  tassle.ts  tsconfig.json
.beads/: config.yaml  issues.jsonl  issues.jsonl.bak  metadata.json
crates/: Cargo.toml
crates/tass-act-enervate/: Cargo.toml
crates/tass-act-enervate/src/: lib.rs
crates/tass-chat-enervate/: Cargo.toml
crates/tass-chat-enervate/src/: lib.rs
crates/tass-cli/: Cargo.toml
crates/tass-cli/examples/: auth_spike.rs
crates/tass-cli/src/: main.rs  profile_config.rs
crates/tass-cli/src/commands/: auth.rs  config.rs  mage.rs  mod.rs  quint.rs  repo.rs  self_record.rs
crates/tass-cli/src/commands/generate/: mod.rs  node.rs  node_item.rs
crates/tass-codegen/: Cargo.toml
crates/tass-codegen/src/: main.rs
crates/tass-config/: Cargo.toml
crates/tass-config-tailscale/: Cargo.toml
crates/tass-config-tailscale/src/: lib.rs
crates/tass-config/src/: auth.rs  config.rs  dirs.rs  lib.rs  read.rs  service.rs  session.rs
crates/tass-engine/: Cargo.toml
crates/tass-engine/src/: lib.rs
crates/tass-ledger/: Cargo.toml
crates/tass-ledger/src/: fjall_store.rs  store.rs
crates/tass-lex/: Cargo.toml
crates/tass-lex-corpus/: Cargo.toml
crates/tass-lex-corpus/samples/: node-crystal-spring.example.json
crates/tass-lex-corpus/src/: lib.rs
crates/tass-lex-rpg/: Cargo.toml
crates/tass-lex-rpg-sample/: Cargo.toml
crates/tass-lex-rpg-sample/samples/: equipment-item.example.json  mage-stats.example.json
crates/tass-lex-rpg-sample/src/: lib.rs
crates/tass-lex-rpg-schema/: Cargo.toml
crates/tass-lex-rpg-schema/lexicons/: actor.rpg.master.json  actor.rpg.sprite.json  actor.rpg.stats.json  equipment.rpg.give.json  equipment.rpg.item.json
crates/tass-lex-rpg-schema/src/: lib.rs
crates/tass-lex-rpg/examples/: smoke.rs
crates/tass-lex-rpg/src/: actor_rpg.rs  equipment_rpg.rs  lib.rs
crates/tass-lex-rpg/src/actor_rpg/: master.rs  sprite.rs  stats.rs
crates/tass-lex-rpg/src/equipment_rpg/: give.rs  item.rs
crates/tass-lex-sample/: Cargo.toml
crates/tass-lex-sample/samples/: enervate-spend.example.json  meditate-dawn-pull.example.json  node-crystal-spring.example.json  tassilize-silver-coin.example.json
crates/tass-lex-sample/src/: lib.rs
crates/tass-lex-schema/: Cargo.toml
crates/tass-lex-schema/lexicons/: at.telluri.act.enervate.json  at.telluri.act.meditate.json  at.telluri.act.tassilize.json  at.telluri.node.json  at.telluri.resonance.json  com.superbfowle.tass.enervate.json  com.superbfowle.tass.meditate.json  com.superbfowle.tass.resonance.json  com.superbfowle.tass.tassilize.json
crates/tass-lex-schema/src/: lib.rs
crates/tass-lex/examples/: smoke.rs
crates/tass-lex/src/at_telluri/: node.rs  resonance.rs
crates/tass-lex/src/at_telluri/act/: enervate.rs  tassilize.rs
crates/tass-lexicons/: Cargo.toml
crates/tass-lexicons/examples/: smoke.rs
crates/tass-lexicons/src/: at_telluri.rs
crates/tass-lexicons/src/at_telluri/: act.rs
crates/tass-listen/: Cargo.toml
crates/tass-listen/src/: lib.rs  main.rs
crates/tass-mage/: Cargo.toml
crates/tass-mage/src/: lib.rs
crates/tass-output/: Cargo.toml
crates/tass-output/src/: lib.rs
crates/tass-phase/: Cargo.toml  README.md
crates/tass-phase/src/: lib.rs
crates/tass-phase/tests/: burn_chain.rs
crates/tass-quint/: Cargo.toml
crates/tass-quint-jac/: Cargo.toml
crates/tass-quint-jac/src/: lib.rs
crates/tass-quint/src/: lib.rs
crates/tass-repo/: Cargo.toml
crates/tass-repo-mage/: Cargo.toml
crates/tass-repo-mage/src/: lib.rs
crates/tass-repo/src/: lib.rs
crates/tass-slingshot/: Cargo.toml
crates/tass-slingshot/src/: lib.rs
crates/tass-spacedust/: Cargo.toml
crates/tass-spacedust/examples/: tail.rs
crates/tass-spacedust/src/: lib.rs
crates/tass-stats/: Cargo.toml
crates/tass-stats/src/: lib.rs
crates/tass-validate/: Cargo.toml
crates/tass-validate/src/: main.rs
crates/tass-web/: Cargo.toml
crates/tass-web-auth/: Cargo.toml
crates/tass-web-auth/src/: cookie_key.rs  keyset.rs  lib.rs  login.rs  metadata.rs  state.rs
crates/tass-web-auth/tests/: wiring.rs
crates/tass-web/src/: main.rs
crates/tassle-cli/: Cargo.toml
crates/tassle-cli/examples/: auth_spike.rs
crates/tassle-cli/src/: config.rs  main.rs  profile_config.rs
crates/tassle-cli/src/commands/: auth.rs  config.rs  mage.rs  mint.rs  mod.rs  quint.rs  repo.rs  samples.rs  self_record.rs
crates/tassle-cli/src/commands/generate/: mod.rs  node.rs
crates/tassle-codegen/: Cargo.toml
crates/tassle-codegen/src/: main.rs
crates/tassle-config/: Cargo.toml
crates/tassle-config/src/: auth.rs  config.rs  dirs.rs  lib.rs
crates/tassle-ledger/: Cargo.toml
crates/tassle-ledger/src/: fjall_store.rs  lib.rs  store.rs
crates/tassle-lexicons/: Cargo.toml
crates/tassle-lexicons/examples/: smoke.rs
crates/tassle-lexicons/src/: com_superbfowle.rs  lib.rs
crates/tassle-lexicons/src/at_telluri/act/: meditate.rs
crates/tassle-lexicons/src/com_superbfowle/: tass.rs
crates/tassle-lexicons/src/com_superbfowle/tass/: enervate.rs  form.rs  meditate.rs  node.rs  resonance.rs  tassilize.rs
crates/tassle-validate/: Cargo.toml
crates/tassle-validate/src/: main.rs
doc/: act.md  auth-design.md  axum.md  design.gpt.md  generate-design.md  hedystia-listener-design.md  jacquard-use.md  ledger.md  microquint.md  oauth.md  repo.md  spacedust.md
doc/adr/: 0001-profile-config-before-auth.md
doc/discovery/: attestation.md  cli-surface-findings.md  cli-surface.md  lex-co-core.md  lex-layers-pub.md  lex-rpg-actor.md  lexicon-ideas.md  lexicon-publication.md  resonance-design.md  spacedust.md
lexicons/: com.superbfowle.tass.form.json  com.superbfowle.tass.node.json  com.superbfowle.tass.resonance.json
samples/: enervate-spend.example.json  meditate-dawn-pull.example.json  node-crystal-spring.example.json  tassilize-silver-coin.example.json
src/: config.ts
xtask/: Cargo.toml
xtask/src/: main.rs
(+99 files in other folders)
