[workspace]
resolver = "2"
members = [
    "crates/tass-lex-schema",
    "crates/tass-lex-sample",
    "crates/tass-quint",
    "crates/tass-quint-jac",
    "crates/tassle-codegen",
    "crates/tassle-config",
    "crates/tassle-lexicons",
    "crates/tassle-validate",
    "crates/tassle-cli",
    "crates/tassle-ledger",
    "xtask",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/rektide/tassle"
version = "0.1.0"

[workspace.dependencies]
# Jacquard 0.12 (crates.io) — version-aligned with jac-store-fjall.
jacquard = { version = "0.12", default-features = false, features = ["api", "cache", "dns"] }
jacquard-common = "0.12"
jacquard-derive = "0.12"
jacquard-identity = "0.12"
jacquard-lexicon = "0.12"
jacquard-oauth = "0.12"
# Local path dep — version-aligned on jacquard 0.12. The auth store runs on the
# native-SQL turso backend (engine-v2 AuthRepository), so default features
# (backend-fjall + parking_lot) are off: turso self-serializes via SQL and needs
# no RMW lock.
jac-store-fjall = { path = "../jac-store-fjall", default-features = false, features = ["backend-turso"] }
# Local fork of figment2 with the ops/DropIns/select_profile_from_config
# machinery we build the profile model on (see ~/src/figments-rs).
figment2 = { path = "../figments-rs", features = ["toml"] }
