[workspace]
resolver = "2"
members = [
    "crates/tass-lex-schema",
    "crates/tass-lex-sample",
    "crates/tass-phase",
    "crates/tass-quint",
    "crates/tass-repo",
    "crates/tass-repo-mage",
    "crates/tass-stats",
    "crates/tass-codegen",
    "crates/tass-config",
    "crates/tass-lex",
    "crates/tass-lex-rpg",
    "crates/tass-lex-rpg-schema",
    "crates/tass-lex-rpg-sample",
    "crates/tass-validate",
    "crates/tass-cli",
    "crates/tass-ledger",
    "crates/tass-spacedust",
    "crates/tass-engine",
    "crates/tass-slingshot",
    "crates/tass-listen",
    "xtask",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/rektide/tassle"
version = "0.1.0"

[workspace.dependencies]
# Jacquard 0.12 (crates.io) — version-aligned with jac-store-fjall.
jacquard = { version = "0.12", default-features = false, features = ["api", "cache", "dns"] }
jacquard-common = "0.12"
jacquard-derive = "0.12"
jacquard-identity = "0.12"
jacquard-lexicon = "0.12"
jacquard-oauth = "0.12"
# Local path dep — version-aligned on jacquard 0.12. The auth store runs on the
# native-SQL turso backend (engine-v2 AuthRepository), so default features
# (backend-fjall + parking_lot) are off: turso self-serializes via SQL and needs
# no RMW lock.
jac-store-fjall = { package = "jac-stores", path = "../jac-store-fjall", default-features = false, features = ["backend-turso"] }
# Local fork of figment2 with the ops/DropIns/select_profile_from_config
# machinery we build the profile model on (see ~/src/figments-rs).
figment2 = { path = "../figments-rs", features = ["toml"] }
