[workspace]
resolver = "2"
members = [
    "crates/tass-lex-schema",
    "crates/tass-lex-sample",
    "crates/tass-phase",
    "crates/tass-quint",
    "crates/tass-repo",
    "crates/tass-repo-mage",
    "crates/tass-output",
    "crates/tass-codegen",
    "crates/tass-config",
    "crates/tass-lex",
    "crates/tass-lex-rpg",
    "crates/tass-lex-rpg-schema",
    "crates/tass-lex-rpg-sample",
    "crates/tass-validate",
    "crates/tass-cli",
    "crates/tass-ledger",
    "crates/tass-spacedust",
    "crates/tass-engine",
    "crates/tass-slingshot",
    "crates/tass-listen",
    "crates/tass-act-enervate",
    "crates/tass-web",
    "crates/tass-web-auth",
    "xtask",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/rektide/tassle"
version = "0.1.0"

[workspace.dependencies]
# Jacquard 0.12 (crates.io) — version-aligned with jac-stores.
jacquard = { version = "0.12.1", default-features = false, features = ["api", "cache", "dns"] }
jacquard-axum = "0.12.1"
jacquard-common = "0.12.1"
jacquard-derive = "0.12.1"
jacquard-identity = "0.12.1"
jacquard-lexicon = "0.12.1"
jacquard-oauth = "0.12.1"
# Local path dep — version-aligned on jacquard 0.12. The auth store runs on the
# native-SQL turso backend (engine-v2 AuthRepository), so default features
# (backend-fjall + parking_lot) are off: turso self-serializes via SQL and needs
# no RMW lock.
jac-stores = { path = "../jac-stores", default-features = false, features = ["backend-turso"] }
# Local fork of figment2 with the ops/DropIns/select_profile_from_config
# machinery we build the profile model on (see ~/src/figments-rs).
figment2 = { path = "../figments-rs", features = ["toml"] }
