[workspace]
resolver = "2"
members = ["tassle-codegen", "tassle-lexicons", "tassle-validate", "tassle-cli", "tassle-ledger"]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/rektide/tassle"
version = "0.1.0"

[workspace.dependencies]
# Jacquard crates — not on crates.io, use git dep on rsform/jacquard
jacquard-lexicon = { git = "https://github.com/rsform/jacquard.git" }
