[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Workspace task runner: lexicon codegen + sample regeneration."

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
tassle-lexicons = { path = "../crates/tassle-lexicons" }
jacquard-common.workspace = true
jacquard-lexicon.workspace = true
clap = { version = "~4.4", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
chrono = "0.4"
miette = { version = "7", features = ["fancy"] }
