[package]
name = "tass-chat-enervate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Flight 1 of enervate: the chat flight. Keyword-spot 'burn my tass' from a post at us, read the user's tass, and mint an at.telluri.act.enervate record in the USER'S OWN repo via their OAuth session. No transfer, no attestation (those are Flight 2)."

[lib]
name = "tass_chat_enervate"
path = "src/lib.rs"

[dependencies]
tass-engine = { path = "../tass-engine" }
tass-phase = { path = "../tass-phase" }
tass-repo = { path = "../tass-repo" }
jacquard = { workspace = true }
jacquard-common = { workspace = true }
rust-fsm = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
