[package]
name = "tass-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Tass CLI — Mint Nodes, Tass, etc. (Rust)"

[[bin]]
name = "tass"
path = "src/main.rs"

[features]
default = []
# Auth/session store backend (jac-stores, turso native-SQL) + interactive
# password prompt. Off by default so the base record-generator CLI stays lean.
auth-store = [
    "dep:jac-stores",
    "dep:rpassword",
    "dep:base64",
    "tass-config/auth-store",
]
# `tassle listen`: the Spacedust listener daemon, composed from tass-listen.
# Off by default so the base CLI stays lean (it pulls websocket/http stacks).
listen = ["dep:tass-listen"]

[dependencies]
tass-lex = { path = "../tass-lex" }
tass-quint = { path = "../tass-quint" }
tass-lex-rpg = { path = "../tass-lex-rpg" }
tass-repo = { path = "../tass-repo" }
# Output layer: Format + Render trait + record Envelope (json / dag-cbor / table).
tass-output = { path = "../tass-output" }
# Mage-record DAO: the actor.rpg.stats read helpers (always) + QuintClient write
# path (used by the auth-store quint command). Non-optional — its deps (tass-repo,
# jacquard) are already in the base build, so it costs the lean CLI nothing.
tass-repo-mage = { path = "../tass-repo-mage" }
# Base config/profile model (figment2). The `auth-store` feature additionally
# enables its `auth-store` feature for the AuthedClient path.
tass-config = { path = "../tass-config" }
jacquard.workspace = true
jacquard-common.workspace = true
jacquard-lexicon.workspace = true
figment2.workspace = true
# Optional: durable auth-session store + interactive login. Gated by `auth-store`.
jac-stores = { workspace = true, optional = true }
rpassword = { version = "7", optional = true }
base64 = { version = "0.22", optional = true }
# Optional: the listener daemon, exposed as `tassle listen`. Gated by `listen`.
tass-listen = { path = "../tass-listen", optional = true }
clap = { version = "~4.4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_ipld_dagcbor = "0.6"
miette = { version = "7", features = ["fancy"] }
chrono = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml_edit = "0.22"

[dev-dependencies]
# Used by examples/spikes behind the `auth-store` feature.
anyhow = "1"
tempfile = "3"
