[package]
name = "tass-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Generate Rust types from tass lexicons using jacquard-lexicon's codegen"

[[bin]]
name = "tass-codegen"
path = "src/main.rs"

[dependencies]
jacquard-lexicon.workspace = true
clap = { version = "~4.4", features = ["derive"] }
miette = { version = "7", features = ["fancy"] }
