[package]
name = "tass-config-tailscale"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Tailscale config fragment for tassle services. Pure config shape — runtime lifecycle lives in the consuming crate."

[lib]
name = "tass_config_tailscale"
path = "src/lib.rs"

[dependencies]
figment2 = { workspace = true }
serde = { version = "1", features = ["derive"] }
shell-words = "1"

[dev-dependencies]
miette = { version = "7", features = ["fancy"] }
