[package]
name = "tass-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Tass config + profile + auth bundle — the foundation the app bootstraps from (spike)."

[lib]
name = "tass_config"
path = "src/lib.rs"

[features]
default = []
# Authed-client construction: a jacquard CredentialSession over the turso
# app-password store, resumed from the active profile and pointed at its PDS.
# Off by default so the pure config/profile build stays light; the app enables
# this for write paths.
auth-store = ["dep:jac-stores", "dep:jacquard", "dep:jacquard-common", "dep:http", "dep:bon"]

[dependencies]
figment2.workspace = true
serde = { version = "1", features = ["derive"] }
miette = { version = "7", features = ["fancy"] }
# Optional, behind `auth-store`:
jac-stores = { workspace = true, optional = true }
# `loopback` pulls in jacquard-oauth's `login_with_local_server` + browser-open —
# the CLI/localhost OAuth login flow (see `oauth_login`).
jacquard = { workspace = true, optional = true, features = ["loopback"] }
jacquard-common = { workspace = true, optional = true }
# Builder generator for the auth-path builders (PreparedProfile + terminals).
bon = { workspace = true, optional = true }
# `http::Request`/`http::Response` for the ReadClient `HttpClient` delegation.
http = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3"
