[package]
name = "tass-lex-schema"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Canonical Tass ATProto lexicon JSON documents — source-of-truth for codegen and validation."

[lib]
name = "tass_lex_schema"
path = "src/lib.rs"
