[package]
name = "tass-mage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Pure actor.rpg.stats/mage domain: mage-block location + normalization. No jacquard, no IO."

[lib]
name = "tass_mage"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tass-quint = { path = "../tass-quint" }

[dev-dependencies]
serde_json = { version = "1", features = ["preserve_order"] }
