[package]
name = "tass-output"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Output layer: Format + Render trait + record Envelope. json / dag-cbor / (human) table over one writer."

[lib]
name = "tass_output"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_ipld_dagcbor = "0.6"

[dev-dependencies]
serde_json = { version = "1", features = ["preserve_order"] }
