[package]
name = "tass-repo-mage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Jacquard-backed DAO for the actor.rpg.stats/mage record (hosts the tass-quint field RMW)."

[lib]
name = "tass_repo_mage"
path = "src/lib.rs"

[dependencies]
tass-quint = { path = "../tass-quint" }
jacquard-common.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

[dev-dependencies]
jacquard.workspace = true
serde_json = { version = "1", features = ["preserve_order"] }
