[package]
name = "tass-repo"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Generic atproto record access: identity resolution + get/list reads over jacquard, as normalized envelopes. No lexicon knowledge."

[lib]
name = "tass_repo"
path = "src/lib.rs"

[dependencies]
jacquard.workspace = true
jacquard-common.workspace = true
serde_json = { version = "1", features = ["preserve_order"] }
