[package]
name = "tass-slingshot"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "A tass-engine Hydrator backed by microcosm's Slingshot record cache: getRecord against a Slingshot instance to turn a Spacedust pointer into a record body."

[lib]
name = "tass_slingshot"
path = "src/lib.rs"

[dependencies]
tass-engine = { path = "../tass-engine" }
tass-repo = { path = "../tass-repo" }
jacquard = { workspace = true }
jacquard-common = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
