[package]
name = "tass-validate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Validate a JSON record against a tass lexicon at runtime. Reads JSON from stdin."

[[bin]]
name = "tass-validate"
path = "src/main.rs"

[dependencies]
tass-lex = { path = "../tass-lex" }
jacquard-common.workspace = true
jacquard-lexicon.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
clap = { version = "~4.4", features = ["derive"] }
miette = { version = "7", features = ["fancy"] }
inventory = "0.3"
