[package]
name = "tass-web-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Wiring for the tass-web axum OAuth login service: build jacquard's OAuthClient from ServiceConfig + the client-auth keyset + the turso session store."

[dependencies]
tass-config = { path = "../tass-config" }
jacquard = { workspace = true }
jacquard-axum = { workspace = true }
jac-stores = { workspace = true }
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie-private"] }
getrandom = "0.2"
miette = { version = "7", features = ["fancy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
html-escape = "0.2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
