[package]
name = "tass-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "The Hedystia web server: axum-based HTTP service for the tass web flow. Reuses the auth core from tass-config."

[[bin]]
name = "tass-web"
path = "src/main.rs"

[dependencies]
tass-config = { path = "../tass-config" }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
figment2 = { workspace = true }
clap = { version = "~4.4", features = ["derive"] }
miette = { version = "7", features = ["fancy"] }
