[package]
name = "tass-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "The tass web server: axum OAuth login service over the shared turso store. Wires tass-web-auth."

[[bin]]
name = "tass-web"
path = "src/main.rs"

[dependencies]
tass-config = { path = "../tass-config" }
tass-web-auth = { path = "../tass-web-auth" }
jacquard = { workspace = true }
jacquard-axum = { workspace = true }
jac-stores = { workspace = true }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "~4.4", features = ["derive"] }
miette = { version = "7", features = ["fancy"] }
