[package]
name = "tassle-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Tassle CLI — Mint Nodes, Tass, etc. (Rust)"

[[bin]]
name = "tassle"
path = "src/main.rs"

[dependencies]
tassle-lexicons = { path = "../tassle-lexicons" }
tass-lex-corpus = { path = "../tass-lex-corpus" }
jacquard = { git = "https://github.com/rsform/jacquard.git", default-features = false, features = ["api", "cache", "dns"] }
jacquard-common = { git = "https://github.com/rsform/jacquard.git" }
jacquard-lexicon = { git = "https://github.com/rsform/jacquard.git" }
clap = { version = "~4.4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_ipld_dagcbor = "0.6"
miette = { version = "7", features = ["fancy"] }
chrono = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml_edit = "0.22"
